<resources>
    <string name="app_name">Pilot\nAssistent</string>

    <!--Toolbar menus-->
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer-->
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Что то пошло не так!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Отсутствует подключение к интернету!</string>

    <!--Вход-->
    <string name="login">Вход</string>
    <string name="nickname">Никнейм</string>
    <string name="name">Имя</string>
    <string name="sex">Пол</string>
    <string name="registration">У Вас нет аккаунта?</string>
    <string name="usernameOrEmail">Ник или Email</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>

    <!--Регистрация-->
    <string name="reg">Регистрация</string>
    <string name="full_name">Полное имя</string>
    <string name="email">Email</string>
    <string name="gender">Пол</string>
    <string name="men">Мужской</string>
    <string name="women">Женский</string>
    <string name="birthday">Дата рождения</string>
    <string name="date">DD/MM/YYYY</string>



    <!--Login and Registration Validation-->
    <string name="empty_email">Пожалуйста, введите Ваш email.</string>
    <string name="invalid_email">Пожалуйста, введите корректный email.</string>
    <string name="empty_password">Пожалуйста, введите Ваш пароль.</string>
    <string name="empty_name">Пожалуйста, введите Имя.</string>
    <string name="empty_username">Пожалуйста, введите Ваш Username.</string>
    <string name="password_not_same">Пароли не совпадают!</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
</resources>
