<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/activity_registration"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:subtitleTextColor="@color/white"
                app:title="@string/reg"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/white" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <!-- Login progress -->
        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_xlarge"
                android:visibility="gone" />

        <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <RelativeLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_xlarge">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                    <ImageView android:layout_width="100dp"
                               android:layout_height="100dp"

                               android:layout_gravity="center|top"
                               android:src="@drawable/airplane_logo"
                               android:contentDescription="@string/app_name"/>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/full_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/nickname"
                                android:inputType="text"
                                android:maxLines="1"
                                android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <AutoCompleteTextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/repeat_password"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/spacing_middle"
                            android:layout_marginTop="@dimen/spacing_middle"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/spacing_medium"
                                android:paddingRight="@dimen/spacing_medium"
                                android:text="@string/gender"
                                style="@style/TextStyle" />

                        <RadioGroup
                                android:id="@+id/gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_medium"
                                android:orientation="horizontal">

                            <android.support.v7.widget.AppCompatRadioButton
                                    android:id="@+id/radio_female"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/men"
                                    android:checked="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    style="@style/TextStyle" />

                            <View
                                    android:layout_width="@dimen/spacing_mlarge"
                                    android:layout_height="0dp" />

                            <android.support.v7.widget.AppCompatRadioButton
                                    android:id="@+id/radio_male"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/women"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                    style="@style/TextStyle" />

                        </RadioGroup>

                    </LinearLayout>

                    <Button
                            android:id="@+id/email_sign_in_button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/spacing_large"
                            android:background="@color/colorPrimaryDark"
                            android:text="@string/reg"
                            android:textColor="@android:color/white" />


                </LinearLayout>

            </RelativeLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>