<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="22dp">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:layout_margin="20dp"
                android:orientation="vertical">

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:layout_marginTop="10dp"
                       android:layout_gravity="center|top"
                       android:src="@drawable/airplane_logo"
                       android:contentDescription="@string/app_name"/>

            <TextView
                    style="@style/TextStyle.Heading"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="10dp"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
            />

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_email"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:hint="@string/usernameOrEmail"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp" tools:ignore="RtlHardcoded"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
                    app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/TextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/input_border_bottom"
                        android:cursorVisible="true"
                        android:gravity="center|left|bottom"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:paddingBottom="10dp"
                        android:textColor="@color/black_effective"
                        android:textSize="18sp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btn_server_login"
                    style="@style/Button.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textSize="18sp"
                    android:layout_margin="20dp"/>

            <Button
                    android:id="@+id/btn_to_registration"
                    style="@style/EmptyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/registration"
                    android:textSize="12sp"
                    android:layout_marginStart="10dp"
                    android:padding="10dp"
                    android:layout_margin="20dp" android:layout_marginLeft="10dp"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>
